# universal-json

./: LICENSE  Makefile  README.md  dune  dune-project  jest.config.js  package.json  universal-json.opam  universal-json.opam.template
.husky/: pre-commit
test/client/: dune  json_decode_test.ml  json_encode_test.ml  json_js_json_test.ml  json_json_test.ml  json_util_test.ml
test/native/: dune  test.ml  test_json.ml  test_json_decode.ml  test_json_encode.ml  test_json_util.ml  test_json_yojson.ml
